:bug: Fix overflowing data table td elements. Closes #424.

--- a/resources/sass/elements/tables.scss
+++ b/resources/sass/elements/tables.scss
@@ -40,6 +40,7 @@
 
             td {
                 @apply py-1 px-2;
+                work-break: break-all;
             }
         }
     }
